Hero section alignment fixing

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-secbackground: var(--secbackground);
+  --font-poppins: var(--font-poppins);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-alt: var(--font-inter);
